# todo_app

./: .env  .gitignore  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 1b7ae9378176_add_last_verification_email_sent_at_.py
app/: .env  database.py  exceptions.py  main.py
app/.github/workflows/: ci.yaml
app/config/: database.py
app/exceptions/: exceptions.py  handlers.py
app/models/: trusted_devices.py  users.py
app/routers/: users.py
app/schemas/: users.py
app/services/: user_service.py
app/utils/: security.py  unit_of_work.py
taskVenv/: pyvenv.cfg
taskVenv/Scripts/: activate  activate.bat
tests/: test_app_startup.py
